# Rest

./: .gitignore  .gitmodules  Bench.sh  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENTS.md  Knowledge.dot  README.md  benchmark_vscode_compatibility.sh  build.rs  index.js  package.json  postinstall.js  prepublishOnly.sh  run_tests.sh
.cargo/: config.toml
.github/: Update.md  dependabot.yml
.github/workflows/: Node.yml
Documentation/GitHub/: Architecture.md  DeepDive.md
Source/: Binary.rs  Library.rs  Main.rs
Source/Fn/: Build.rs  SWC.rs  mod.rs
Source/Fn/Binary/: Command.rs  mod.rs
Source/Fn/Binary/Command/: Entry.rs  Parallel.rs  Sequential.rs
Source/Fn/Bundle/: Builder.rs  Config.rs  ESBuild.rs  builder.rs  config.rs  esbuild.rs  mod.rs
Source/Fn/NLS/: Bundle.rs  Extract.rs  Replace.rs  bundle.rs  extract.rs  mod.rs  replace.rs
Source/Fn/OXC/: Codegen.rs  Compile.rs  Compiler.rs  Parser.rs  Transformer.rs  Watch.rs  mod.rs
Source/Fn/SWC/: Compile.rs  Watch.rs  mod.rs
Source/Fn/SWC/Watch/: Compile.rs
Source/Fn/Transform/: PrivateField.rs  mod.rs  private_field.rs
Source/Fn/Worker/: Bootstrap.rs  Compile.rs  Detect.rs  bootstrap.rs  compile.rs  detect.rs  mod.rs
Source/Struct/: CompilerConfig.rs  SWC.rs  mod.rs
Source/Struct/Binary/: Command.rs  mod.rs
Source/Struct/Binary/Command/: Entry.rs  Option.rs
tests/: lib.rs
tests/integration/: vscode_compatibility.rs
tests/unit/: codegen_tests.rs  oxc_compiler.rs  parser_tests.rs  transformer_tests.rs
