[[bin]]
name = "Rest"
path = "Source/Library.rs"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
futures = { workspace = true }
git2 = { version = "0.20.3" }
globset = { workspace = true }
itertools = { version = "0.14.0" }
notify = { version = "8.2.0" }
num_cpus = { workspace = true }
par-core = { version = "2.0.0", features = ["rayon"] }
rayon = { version = "1.11.0" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_common = { version = "18.0.1" }
swc_ecma_ast = { version = "20.0.1" }
swc_ecma_codegen = { version = "23.0.0" }
swc_ecma_parser = { version = "33.0.1" }
swc_ecma_transforms_base = { version = "36.0.1", features = ["concurrent"] }
swc_ecma_transforms_proposal = { version = "36.0.1" }
swc_ecma_transforms_typescript = { version = "40.0.0" }
swc_ecma_visit = { version = "20.0.0" }
tokio = { workspace = true, features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = "0.3.22"
unbug = { workspace = true }
walkdir = { version = "2.5.0" }

[features]
default = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Rest"
description = "Rest ⛱️"
edition = "2024"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
license-file = "LICENSE"
name = "Rest"
repository = "https://github.com/CodeEditorLand/Rest.git"
version = "0.0.1"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"aarch64-apple-darwin",
]
