[[bin]]
name = "Rest"
path = "Source/Main.rs"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
par-core = { workspace = true, features = ["rayon"] }
rayon = { version = "1.12.0" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_transformer = { workspace = true }
oxc_minifier = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_ast = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unbug = { workspace = true }

[features]
default = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = true
default-run = "Rest"
description = "Rest ⛱️"
edition = "2024"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
license-file = "LICENSE"
name = "Rest"
repository = "https://github.com/CodeEditorLand/Rest.git"
version = "0.0.1"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"aarch64-apple-darwin",
]
